--- a/web/WEB-INF/fragmentos/top.jspf
+++ b/web/WEB-INF/fragmentos/top.jspf
@@ -40,8 +40,8 @@
                 <li><a href="otros.jsp">Otros</a></li>
               </ul>
             </li>
-            <li><a href="venta.jsp" class="glyphicon glyphicon-usd" >Ventas</a></li>
-            <li><a href="compras.jsp" class="glyphicon glyphicon-shopping-cart">Compra</a></li>
+            <li><a href="ventas.jsp" class="glyphicon glyphicon-usd" >Ventas</a></li>
+            <li><a href="venta.jsp" class="glyphicon glyphicon-shopping-cart">Compra</a></li>
              <li class="dropdown">
               <a href="#"  class="glyphicon glyphicon-calendar" class="dropdown-toggle" data-toggle="dropdown" role="button">
                 Reportes <span class="caret"></span>
